# qwen_dpo_customer_service

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: train.yaml
data/raw/: customer_service_seed.jsonl
docs/: data_pipeline.md  github_upload.md  interview_notes.md  preference_construction.md  references.md
src/qwen_dpo_cs/: __init__.py  api.py  build_dataset.py  evaluation.py  inference.py  io_utils.py  jddc.py  prompting.py  scoring.py
src/qwen_dpo_cs/training/: __init__.py  dpo_train.py  sft_train.py
tests/: test_dataset_build.py  test_evaluation.py
tests/fixtures/: jddc_sample.jsonl
