[project]
name = "qwen-dpo-customer-service"
version = "0.1.0"
description = "E-commerce customer service SFT + DPO preference alignment pipeline based on Qwen."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yang Bo" }]
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.115.0",
  "httpx2>=0.28.0",
  "uvicorn[standard]>=0.30.0",
]
train = [
  "accelerate>=1.0.0",
  "datasets>=3.0.0",
  "peft>=0.13.0",
  "torch>=2.3.0",
  "transformers>=4.45.0",
  "trl>=0.12.0",
]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
cs-build-data = "qwen_dpo_cs.build_dataset:main"
cs-evaluate = "qwen_dpo_cs.evaluation:main"
cs-api = "qwen_dpo_cs.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qwen_dpo_cs"]

[tool.ruff]
line-length = 100
target-version = "py310"
